增加部署说明